--- a/planetary_research_demo/pom.xml
+++ b/planetary_research_demo/pom.xml
@@ -16,6 +16,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-jdbc</artifactId>
             <version>2.2.0</version>
